# pipeworks-dev-notes

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml  release-please-config.json
.github/workflows/: ci.yml  release-please.yml
src/pipeworks_dev_notes/: __init__.py  __main__.py  api_models.py  app.py  frontmatter.py  metadata.py  settings.py  store.py  workspace.py
src/pipeworks_dev_notes/web/static/: app.js  index.html  styles.css
tests/: test_api.py  test_frontmatter.py  test_main.py  test_smoke.py  test_store.py  test_workspace.py  test_workspace_api.py
tools/shared_working/: README.md  working_shared_doctor.sh  working_shared_index.sh  working_shared_link.sh  working_shared_scaffold_note.sh  working_shared_scaffold_repos.sh
